fix: better handling of line breaks in editor; Closes #2

--- a/apps/web/src/styles.css
+++ b/apps/web/src/styles.css
@@ -98,6 +98,7 @@
 
   .ProseMirror {
     p {
+      margin-bottom: calc(var(--spacing) * 4);
       word-break: break-word;
     }
 
